--- a/fashion.css
+++ b/fashion.css
@@ -55,6 +55,7 @@ p {
     color: #333333;
     text-shadow: 2px 5px 2px rgba(0, 0, 0, 0.5);
     font-size: 90px;
+    text-align: center;
 }
 body{
     background-image: url(image/791571123765_.pic_hd.png);
